--- a/DirEnvScript/rust.cargo.config
+++ b/DirEnvScript/rust.cargo.config
@@ -2,7 +2,7 @@
 registry = "https://github.com/rust-lang/crates.io-index"
 
 # 替换成你偏好的镜像源
-replace-with = 'tuna'
+replace-with = 'rustcc2'
 
 # 清华大学
 [source.tuna]
@@ -19,3 +19,6 @@ registry = "https://mirrors.sjtug.sjtu.edu.cn/git/crates.io-index"
 # rustcc社区
 [source.rustcc]
 registry = "git://crates.rustcc.cn/crates.io-index"
+
+[source.rustcc2]
+registry="git://crates.rustcc.com/crates.io-index"
