--- a/DirEnvScript/rust.cargo.config
+++ b/DirEnvScript/rust.cargo.config
@@ -2,7 +2,7 @@
 registry = "https://github.com/rust-lang/crates.io-index"
 
 # 替换成你偏好的镜像源
-replace-with = 'sjtu'
+replace-with = 'ustc'
 
 # 清华大学
 [source.tuna]
